--- a/src/ws_chat.html
+++ b/src/ws_chat.html
@@ -22,6 +22,8 @@
 
 (function(global) {
 
+Ext.BLANK_IMAGE_URL = "extjs/resources/images/default/s.gif";
+
 if (!global.console) {
 	global.console = {
 		'log' : function() {}
