【バグ改修】 ・WebSocketに直接不正データを送られた場合に対処できていなかったので対応 　→ JSONのバリデータにjayschemaを利用 ・ユーザ削除がうまくクライアントに反映されない場合があったので修正 【その他】 ・データ書き込み時のログは、定期出力時は出さないよう修正（うざかったので）

--- a/src/ws_chat.html
+++ b/src/ws_chat.html
@@ -1132,7 +1132,7 @@ function msgAdd(targetPanel, data) {
 				wordBreak : 'break-all'
 			},
 			html : (function() {
-				var str = Ext.util.Format.htmlEncode(data.msg);
+				var str = Ext.util.Format.htmlEncode(''+data.msg);
 				str = str.replace(
 					/(^|\s|\()(https?:\/\/[a-zA-Z0-9\-_.!?~*;:\/\@&=+\$,%#]+)/g,
 					'$1<a target="_blank" href="$2">$2</a>');
