--- a/src/ws_chat.html
+++ b/src/ws_chat.html
@@ -14,12 +14,15 @@
 		}
 		document.write('<link rel="stylesheet" type="text/css" href="extjs/resources/css/xtheme-'+theme+'.css"/>');
 	</script>
+
 	<script type="text/javascript" src="extjs/adapter/ext/ext-base.js"></script> 
 	<script type="text/javascript" src="extjs/ext-all.js"></script> 
+	<script type="text/javascript" src="cryptico/cryptico.js"></script> 
 	<script type="text/javascript" src="socket.io/socket.io.js"></script>
 
+	<script type="text/javascript" src="config.js"></script> 
+	<script type="text/javascript" src="common.js"></script> 
 	<script type="text/javascript" src="client.js"></script> 
-
 </head>
 <body>
 </body>
