--- a/src/ws_chat.html
+++ b/src/ws_chat.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html manifest="ws_chat.manifest">
+<!--
+<html>
+-->
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
